# tCam

./: .gitignore  readme.md
DesktopApp/: readme.md
WebApp/: Dockerfile  readme_docker.md
WebApp/config/: config.json
programming/: readme.md
tCam/: readme.md
tCam-Eth/: readme.md
tCam-Eth/hardware/tCam-Eth-Baseboard/design/: tcam_mini_eth_base.brd  tcam_mini_eth_base.sch
tCam-Eth/hardware/tCam-Eth-Baseboard/documentation/: tcam_eth_baseboard_rev_1_bom.xlsx  tcam_mini_eth_base_centroid.csv  (+1 more)
tCam-Mini/: readme.md
tCam-Mini/firmware/: readme.md  sdkconfig  sdkconfig.old
tCam-Mini/firmware/main/: main.c
tCam-Mini/hardware/: readme.md
tCam-POE/: readme.md
tCam-POE/hardware/: readme.md
tCam-POE/hardware/documentation/: tcam_poe_centroid.csv  tcam_poe_loadlist.txt  tcam_poe_rev_1_bom.xlsx
tCam-POE/hardware/gerber/: tcam_poe.GBL  tcam_poe.GBO  tcam_poe.GBS  tcam_poe.GML  tcam_poe.GTL  tcam_poe.GTO  tcam_poe.GTS  tcam_poe.TXT
tCam-POE/hardware/stencil/: tcam_poe.GTP
tCam/enclosure/: readme.md
tCam/enclosure/tcam_fdm/: tcam_flat_batt.scad  tcam_flat_batt_base.stl  tcam_flat_batt_bezel.stl  tcam_flat_batt_io.stl
tCam/enclosure/tcam_laser/: tcam_laser_front.dxf  tcam_laser_rear.dxf
tCam/firmware/: CMakeLists.txt  partitions.csv  readme.md  sdkconfig  sdkconfig.old
tCam/firmware/main/: CMakeLists.txt  app_task.c  app_task.h  cmd_task.c  cmd_task.h  file_task.c  file_task.h  gcore_task.c  gcore_task.h  gui_task.c  gui_task.h  lep_task.c  lep_task.h  main.c  mon_task.c  mon_task.h  rsp_task.c  rsp_task.h  system_config.h
(+121 files in other folders)
